Swagger documentation | README.md created
